--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.11",
+    "@angular/animations": "^9.1.12",
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.11",
     "@angular/localize": "~9.1.11",
     "@angular/platform-browser": "~9.1.11",
@@ -22,6 +23,8 @@
     "@angular/router": "~9.1.11",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.16.1",
+    "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
