--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "~9.1.11",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "firebase": "^7.16.1",
     "ngx-toastr": "^13.0.0",
+    "nodemailer": "^6.4.11",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
